# Gerenciador-dev

./: .gitattributes  LICENSE  README.md
gnc-dev/: pyproject.toml
gnc-dev/src/: manage.py
gnc-dev/src/apps/gerenciaDev/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
gnc-dev/src/apps/gerenciaDev/migrations/: 0001_initial.py  0002_alocacoes_data_alocacao_projetos_horas.py  0003_alter_alocacoes_data_alocacao.py
gnc-dev/src/apps/gerenciaDev/tests/: test_alocacao.py  test_models.py  test_programador.py  test_projetos.py  test_tecnologias.py
gnc-dev/src/gnc_dev/: asgi.py  settings.py  urls.py  wsgi.py
